[FIX] using .collect(Collectors.toList())